frontend/src/components/toolbar/toolbar.module.scss
@import "../../styles/var";

.toolbar {
  position: sticky;
  top: 2rem;
  padding: 1rem 2rem;
  margin: 2rem 0;
  border-radius: 3rem;
  background-color: $black;
  color: $white;
  font-size: $font-s;
  box-shadow: 5px 5px 10px 0 rgba($color: #000000, $alpha: 0.2);
  z-index: 100000;
}

